src/parser.output
Terminals unused in grammar

   token_not


Grammar

    0 $accept: STATEMENTSP $end

    1 STATEMENTSP: STATEMENTSP STATEMENT
    2            | STATEMENT

    3 STATEMENT: token_id token_assign EXPRESSION
    4          | token_id token_assign token_seq '(' EXPRESSION ',' EXPRESSION ',' EXPRESSION ')'
    5          | token_id token_assign token_array '(' LIST_ARGS ')'
    6          | token_id '[' EXPRESSION ']' token_assign EXPRESSION
    7          | INTORDOUBLE token_id token_assign token_function '(' LIST_PARAMS ')' '{' STATEMENTSP '}'
    8          | token_int_name token_main token_assign token_function '(' LIST_PARAMS ')' '{' STATEMENTSP '}'
    9          | token_if '(' EXPRESSION ')' '{' STATEMENTSP '}'
   10          | token_if '(' EXPRESSION ')' '{' STATEMENTSP '}' token_else '{' STATEMENTSP '}'
   11          | token_for '(' token_id token_in EXPRESSION ':' EXPRESSION ')' '{' STATEMENTSP '}'
   12          | token_while '(' EXPRESSION ')' '{' STATEMENTSP '}'
   13          | token_return '(' EXPRESSIONP ')'
   14          | token_print '(' EXPRESSIONP ')'

   15 EXPRESSIONP: EXPRESSION
   16            | %empty

   17 LIST_PARAMS: LIST_PARAMSP
   18            | %empty

   19 LIST_PARAMSP: LIST_PARAMSP ',' INTORDOUBLE token_id
   20             | INTORDOUBLE token_id

   21 INTORDOUBLE: token_int_name
   22            | token_double_name

   23 LIST_ARGS: LIST_ARGSP
   24          | %empty

   25 LIST_ARGSP: LIST_ARGSP ',' EXPRESSION
   26           | EXPRESSION

   27 EXPRESSION: EXPRESSION '+' EXPRESSION
   28           | EXPRESSION '-' EXPRESSION
   29           | EXPRESSION '*' EXPRESSION
   30           | EXPRESSION '/' EXPRESSION
   31           | EXPRESSION '>' EXPRESSION
   32           | EXPRESSION '<' EXPRESSION
   33           | EXPRESSION token_eq EXPRESSION
   34           | EXPRESSION token_leq EXPRESSION
   35           | EXPRESSION token_geq EXPRESSION
   36           | EXPRESSION token_neq EXPRESSION
   37           | EXPRESSION token_or EXPRESSION
   38           | EXPRESSION token_and EXPRESSION
   39           | '(' EXPRESSION ')'
   40           | token_id
   41           | token_id '[' EXPRESSION ']'
   42           | token_id '(' LIST_ARGS ')'
   43           | token_int
   44           | token_double


Terminals, with rules where they appear

$end (0) 0
'(' (40) 4 5 7 8 9 10 11 12 13 14 39 42
')' (41) 4 5 7 8 9 10 11 12 13 14 39 42
'*' (42) 29
'+' (43) 27
',' (44) 4 19 25
'-' (45) 28
'/' (47) 30
':' (58) 11
'<' (60) 32
'>' (62) 31
'[' (91) 6 41
']' (93) 6 41
'{' (123) 7 8 9 10 11 12
'}' (125) 7 8 9 10 11 12
error (256)
token_int (258) 43
token_double (259) 44
token_id (260) 3 4 5 6 7 11 19 20 40 41 42
token_assign (261) 3 4 5 6 7 8
token_return (262) 13
token_function (263) 7 8
token_for (264) 11
token_in (265) 11
token_if (266) 9 10
token_else (267) 10
token_print (268) 14
token_main (269) 8
token_array (270) 5
token_while (271) 12
token_eq (272) 33
token_leq (273) 34
token_geq (274) 35
token_not (275)
token_neq (276) 36
token_or (277) 37
token_and (278) 38
token_int_name (279) 8 21
token_double_name (280) 22
token_seq (281) 4


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
STATEMENTSP (42)
    on left: 1 2, on right: 0 1 7 8 9 10 11 12
STATEMENT (43)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14, on right: 1 2
EXPRESSIONP (44)
    on left: 15 16, on right: 13 14
LIST_PARAMS (45)
    on left: 17 18, on right: 7 8
LIST_PARAMSP (46)
    on left: 19 20, on right: 17 19
INTORDOUBLE (47)
    on left: 21 22, on right: 7 19 20
LIST_ARGS (48)
    on left: 23 24, on right: 5 42
LIST_ARGSP (49)
    on left: 25 26, on right: 23 25
EXPRESSION (50)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44,
    on right: 3 4 6 9 10 11 12 15 25 26 27 28 29 30 31 32 33 34 35
    36 37 38 39 41


State 0

    0 $accept: . STATEMENTSP $end

    token_id           shift, and go to state 1
    token_return       shift, and go to state 2
    token_for          shift, and go to state 3
    token_if           shift, and go to state 4
    token_print        shift, and go to state 5
    token_while        shift, and go to state 6
    token_int_name     shift, and go to state 7
    token_double_name  shift, and go to state 8

    STATEMENTSP  go to state 9
    STATEMENT    go to state 10
    INTORDOUBLE  go to state 11


State 1

    3 STATEMENT: token_id . token_assign EXPRESSION
    4          | token_id . token_assign token_seq '(' EXPRESSION ',' EXPRESSION ',' EXPRESSION ')'
    5          | token_id . token_assign token_array '(' LIST_ARGS ')'
    6          | token_id . '[' EXPRESSION ']' token_assign EXPRESSION

    token_assign  shift, and go to state 12
    '['           shift, and go to state 13


State 2

   13 STATEMENT: token_return . '(' EXPRESSIONP ')'

    '('  shift, and go to state 14


State 3

   11 STATEMENT: token_for . '(' token_id token_in EXPRESSION ':' EXPRESSION ')' '{' STATEMENTSP '}'

    '('  shift, and go to state 15


State 4

    9 STATEMENT: token_if . '(' EXPRESSION ')' '{' STATEMENTSP '}'
   10          | token_if . '(' EXPRESSION ')' '{' STATEMENTSP '}' token_else '{' STATEMENTSP '}'

    '('  shift, and go to state 16


State 5

   14 STATEMENT: token_print . '(' EXPRESSIONP ')'

    '('  shift, and go to state 17


State 6

   12 STATEMENT: token_while . '(' EXPRESSION ')' '{' STATEMENTSP '}'

    '('  shift, and go to state 18


State 7

    8 STATEMENT: token_int_name . token_main token_assign token_function '(' LIST_PARAMS ')' '{' STATEMENTSP '}'
   21 INTORDOUBLE: token_int_name .

    token_main  shift, and go to state 19

    $default  reduce using rule 21 (INTORDOUBLE)


State 8

   22 INTORDOUBLE: token_double_name .

    $default  reduce using rule 22 (INTORDOUBLE)


State 9

    0 $accept: STATEMENTSP . $end
    1 STATEMENTSP: STATEMENTSP . STATEMENT

    $end               shift, and go to state 20
    token_id           shift, and go to state 1
    token_return       shift, and go to state 2
    token_for          shift, and go to state 3
    token_if           shift, and go to state 4
    token_print        shift, and go to state 5
    token_while        shift, and go to state 6
    token_int_name     shift, and go to state 7
    token_double_name  shift, and go to state 8

    STATEMENT    go to state 21
    INTORDOUBLE  go to state 11


State 10

    2 STATEMENTSP: STATEMENT .

    $default  reduce using rule 2 (STATEMENTSP)


State 11

    7 STATEMENT: INTORDOUBLE . token_id token_assign token_function '(' LIST_PARAMS ')' '{' STATEMENTSP '}'

    token_id  shift, and go to state 22


State 12

    3 STATEMENT: token_id token_assign . EXPRESSION
    4          | token_id token_assign . token_seq '(' EXPRESSION ',' EXPRESSION ',' EXPRESSION ')'
    5          | token_id token_assign . token_array '(' LIST_ARGS ')'

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    token_array   shift, and go to state 26
    token_seq     shift, and go to state 27
    '('           shift, and go to state 28

    EXPRESSION  go to state 29


State 13

    6 STATEMENT: token_id '[' . EXPRESSION ']' token_assign EXPRESSION

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    EXPRESSION  go to state 30


State 14

   13 STATEMENT: token_return '(' . EXPRESSIONP ')'

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    $default  reduce using rule 16 (EXPRESSIONP)

    EXPRESSIONP  go to state 31
    EXPRESSION   go to state 32


State 15

   11 STATEMENT: token_for '(' . token_id token_in EXPRESSION ':' EXPRESSION ')' '{' STATEMENTSP '}'

    token_id  shift, and go to state 33


State 16

    9 STATEMENT: token_if '(' . EXPRESSION ')' '{' STATEMENTSP '}'
   10          | token_if '(' . EXPRESSION ')' '{' STATEMENTSP '}' token_else '{' STATEMENTSP '}'

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    EXPRESSION  go to state 34


State 17

   14 STATEMENT: token_print '(' . EXPRESSIONP ')'

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    $default  reduce using rule 16 (EXPRESSIONP)

    EXPRESSIONP  go to state 35
    EXPRESSION   go to state 32


State 18

   12 STATEMENT: token_while '(' . EXPRESSION ')' '{' STATEMENTSP '}'

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    EXPRESSION  go to state 36


State 19

    8 STATEMENT: token_int_name token_main . token_assign token_function '(' LIST_PARAMS ')' '{' STATEMENTSP '}'

    token_assign  shift, and go to state 37


State 20

    0 $accept: STATEMENTSP $end .

    $default  accept


State 21

    1 STATEMENTSP: STATEMENTSP STATEMENT .

    $default  reduce using rule 1 (STATEMENTSP)


State 22

    7 STATEMENT: INTORDOUBLE token_id . token_assign token_function '(' LIST_PARAMS ')' '{' STATEMENTSP '}'

    token_assign  shift, and go to state 38


State 23

   43 EXPRESSION: token_int .

    $default  reduce using rule 43 (EXPRESSION)


State 24

   44 EXPRESSION: token_double .

    $default  reduce using rule 44 (EXPRESSION)


State 25

   40 EXPRESSION: token_id .
   41           | token_id . '[' EXPRESSION ']'
   42           | token_id . '(' LIST_ARGS ')'

    '('  shift, and go to state 39
    '['  shift, and go to state 40

    $default  reduce using rule 40 (EXPRESSION)


State 26

    5 STATEMENT: token_id token_assign token_array . '(' LIST_ARGS ')'

    '('  shift, and go to state 41


State 27

    4 STATEMENT: token_id token_assign token_seq . '(' EXPRESSION ',' EXPRESSION ',' EXPRESSION ')'

    '('  shift, and go to state 42


State 28

   39 EXPRESSION: '(' . EXPRESSION ')'

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    EXPRESSION  go to state 43


State 29

    3 STATEMENT: token_id token_assign EXPRESSION .
   27 EXPRESSION: EXPRESSION . '+' EXPRESSION
   28           | EXPRESSION . '-' EXPRESSION
   29           | EXPRESSION . '*' EXPRESSION
   30           | EXPRESSION . '/' EXPRESSION
   31           | EXPRESSION . '>' EXPRESSION
   32           | EXPRESSION . '<' EXPRESSION
   33           | EXPRESSION . token_eq EXPRESSION
   34           | EXPRESSION . token_leq EXPRESSION
   35           | EXPRESSION . token_geq EXPRESSION
   36           | EXPRESSION . token_neq EXPRESSION
   37           | EXPRESSION . token_or EXPRESSION
   38           | EXPRESSION . token_and EXPRESSION

    token_eq   shift, and go to state 44
    token_leq  shift, and go to state 45
    token_geq  shift, and go to state 46
    token_neq  shift, and go to state 47
    token_or   shift, and go to state 48
    token_and  shift, and go to state 49
    '<'        shift, and go to state 50
    '>'        shift, and go to state 51
    '+'        shift, and go to state 52
    '-'        shift, and go to state 53
    '*'        shift, and go to state 54
    '/'        shift, and go to state 55

    $default  reduce using rule 3 (STATEMENT)


State 30

    6 STATEMENT: token_id '[' EXPRESSION . ']' token_assign EXPRESSION
   27 EXPRESSION: EXPRESSION . '+' EXPRESSION
   28           | EXPRESSION . '-' EXPRESSION
   29           | EXPRESSION . '*' EXPRESSION
   30           | EXPRESSION . '/' EXPRESSION
   31           | EXPRESSION . '>' EXPRESSION
   32           | EXPRESSION . '<' EXPRESSION
   33           | EXPRESSION . token_eq EXPRESSION
   34           | EXPRESSION . token_leq EXPRESSION
   35           | EXPRESSION . token_geq EXPRESSION
   36           | EXPRESSION . token_neq EXPRESSION
   37           | EXPRESSION . token_or EXPRESSION
   38           | EXPRESSION . token_and EXPRESSION

    token_eq   shift, and go to state 44
    token_leq  shift, and go to state 45
    token_geq  shift, and go to state 46
    token_neq  shift, and go to state 47
    token_or   shift, and go to state 48
    token_and  shift, and go to state 49
    '<'        shift, and go to state 50
    '>'        shift, and go to state 51
    '+'        shift, and go to state 52
    '-'        shift, and go to state 53
    '*'        shift, and go to state 54
    '/'        shift, and go to state 55
    ']'        shift, and go to state 56


State 31

   13 STATEMENT: token_return '(' EXPRESSIONP . ')'

    ')'  shift, and go to state 57


State 32

   15 EXPRESSIONP: EXPRESSION .
   27 EXPRESSION: EXPRESSION . '+' EXPRESSION
   28           | EXPRESSION . '-' EXPRESSION
   29           | EXPRESSION . '*' EXPRESSION
   30           | EXPRESSION . '/' EXPRESSION
   31           | EXPRESSION . '>' EXPRESSION
   32           | EXPRESSION . '<' EXPRESSION
   33           | EXPRESSION . token_eq EXPRESSION
   34           | EXPRESSION . token_leq EXPRESSION
   35           | EXPRESSION . token_geq EXPRESSION
   36           | EXPRESSION . token_neq EXPRESSION
   37           | EXPRESSION . token_or EXPRESSION
   38           | EXPRESSION . token_and EXPRESSION

    token_eq   shift, and go to state 44
    token_leq  shift, and go to state 45
    token_geq  shift, and go to state 46
    token_neq  shift, and go to state 47
    token_or   shift, and go to state 48
    token_and  shift, and go to state 49
    '<'        shift, and go to state 50
    '>'        shift, and go to state 51
    '+'        shift, and go to state 52
    '-'        shift, and go to state 53
    '*'        shift, and go to state 54
    '/'        shift, and go to state 55

    $default  reduce using rule 15 (EXPRESSIONP)


State 33

   11 STATEMENT: token_for '(' token_id . token_in EXPRESSION ':' EXPRESSION ')' '{' STATEMENTSP '}'

    token_in  shift, and go to state 58


State 34

    9 STATEMENT: token_if '(' EXPRESSION . ')' '{' STATEMENTSP '}'
   10          | token_if '(' EXPRESSION . ')' '{' STATEMENTSP '}' token_else '{' STATEMENTSP '}'
   27 EXPRESSION: EXPRESSION . '+' EXPRESSION
   28           | EXPRESSION . '-' EXPRESSION
   29           | EXPRESSION . '*' EXPRESSION
   30           | EXPRESSION . '/' EXPRESSION
   31           | EXPRESSION . '>' EXPRESSION
   32           | EXPRESSION . '<' EXPRESSION
   33           | EXPRESSION . token_eq EXPRESSION
   34           | EXPRESSION . token_leq EXPRESSION
   35           | EXPRESSION . token_geq EXPRESSION
   36           | EXPRESSION . token_neq EXPRESSION
   37           | EXPRESSION . token_or EXPRESSION
   38           | EXPRESSION . token_and EXPRESSION

    token_eq   shift, and go to state 44
    token_leq  shift, and go to state 45
    token_geq  shift, and go to state 46
    token_neq  shift, and go to state 47
    token_or   shift, and go to state 48
    token_and  shift, and go to state 49
    '<'        shift, and go to state 50
    '>'        shift, and go to state 51
    '+'        shift, and go to state 52
    '-'        shift, and go to state 53
    '*'        shift, and go to state 54
    '/'        shift, and go to state 55
    ')'        shift, and go to state 59


State 35

   14 STATEMENT: token_print '(' EXPRESSIONP . ')'

    ')'  shift, and go to state 60


State 36

   12 STATEMENT: token_while '(' EXPRESSION . ')' '{' STATEMENTSP '}'
   27 EXPRESSION: EXPRESSION . '+' EXPRESSION
   28           | EXPRESSION . '-' EXPRESSION
   29           | EXPRESSION . '*' EXPRESSION
   30           | EXPRESSION . '/' EXPRESSION
   31           | EXPRESSION . '>' EXPRESSION
   32           | EXPRESSION . '<' EXPRESSION
   33           | EXPRESSION . token_eq EXPRESSION
   34           | EXPRESSION . token_leq EXPRESSION
   35           | EXPRESSION . token_geq EXPRESSION
   36           | EXPRESSION . token_neq EXPRESSION
   37           | EXPRESSION . token_or EXPRESSION
   38           | EXPRESSION . token_and EXPRESSION

    token_eq   shift, and go to state 44
    token_leq  shift, and go to state 45
    token_geq  shift, and go to state 46
    token_neq  shift, and go to state 47
    token_or   shift, and go to state 48
    token_and  shift, and go to state 49
    '<'        shift, and go to state 50
    '>'        shift, and go to state 51
    '+'        shift, and go to state 52
    '-'        shift, and go to state 53
    '*'        shift, and go to state 54
    '/'        shift, and go to state 55
    ')'        shift, and go to state 61


State 37

    8 STATEMENT: token_int_name token_main token_assign . token_function '(' LIST_PARAMS ')' '{' STATEMENTSP '}'

    token_function  shift, and go to state 62


State 38

    7 STATEMENT: INTORDOUBLE token_id token_assign . token_function '(' LIST_PARAMS ')' '{' STATEMENTSP '}'

    token_function  shift, and go to state 63


State 39

   42 EXPRESSION: token_id '(' . LIST_ARGS ')'

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    $default  reduce using rule 24 (LIST_ARGS)

    LIST_ARGS   go to state 64
    LIST_ARGSP  go to state 65
    EXPRESSION  go to state 66


State 40

   41 EXPRESSION: token_id '[' . EXPRESSION ']'

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    EXPRESSION  go to state 67


State 41

    5 STATEMENT: token_id token_assign token_array '(' . LIST_ARGS ')'

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    $default  reduce using rule 24 (LIST_ARGS)

    LIST_ARGS   go to state 68
    LIST_ARGSP  go to state 65
    EXPRESSION  go to state 66


State 42

    4 STATEMENT: token_id token_assign token_seq '(' . EXPRESSION ',' EXPRESSION ',' EXPRESSION ')'

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    EXPRESSION  go to state 69


State 43

   27 EXPRESSION: EXPRESSION . '+' EXPRESSION
   28           | EXPRESSION . '-' EXPRESSION
   29           | EXPRESSION . '*' EXPRESSION
   30           | EXPRESSION . '/' EXPRESSION
   31           | EXPRESSION . '>' EXPRESSION
   32           | EXPRESSION . '<' EXPRESSION
   33           | EXPRESSION . token_eq EXPRESSION
   34           | EXPRESSION . token_leq EXPRESSION
   35           | EXPRESSION . token_geq EXPRESSION
   36           | EXPRESSION . token_neq EXPRESSION
   37           | EXPRESSION . token_or EXPRESSION
   38           | EXPRESSION . token_and EXPRESSION
   39           | '(' EXPRESSION . ')'

    token_eq   shift, and go to state 44
    token_leq  shift, and go to state 45
    token_geq  shift, and go to state 46
    token_neq  shift, and go to state 47
    token_or   shift, and go to state 48
    token_and  shift, and go to state 49
    '<'        shift, and go to state 50
    '>'        shift, and go to state 51
    '+'        shift, and go to state 52
    '-'        shift, and go to state 53
    '*'        shift, and go to state 54
    '/'        shift, and go to state 55
    ')'        shift, and go to state 70


State 44

   33 EXPRESSION: EXPRESSION token_eq . EXPRESSION

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    EXPRESSION  go to state 71


State 45

   34 EXPRESSION: EXPRESSION token_leq . EXPRESSION

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    EXPRESSION  go to state 72


State 46

   35 EXPRESSION: EXPRESSION token_geq . EXPRESSION

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    EXPRESSION  go to state 73


State 47

   36 EXPRESSION: EXPRESSION token_neq . EXPRESSION

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    EXPRESSION  go to state 74


State 48

   37 EXPRESSION: EXPRESSION token_or . EXPRESSION

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    EXPRESSION  go to state 75


State 49

   38 EXPRESSION: EXPRESSION token_and . EXPRESSION

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    EXPRESSION  go to state 76


State 50

   32 EXPRESSION: EXPRESSION '<' . EXPRESSION

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    EXPRESSION  go to state 77


State 51

   31 EXPRESSION: EXPRESSION '>' . EXPRESSION

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    EXPRESSION  go to state 78


State 52

   27 EXPRESSION: EXPRESSION '+' . EXPRESSION

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    EXPRESSION  go to state 79


State 53

   28 EXPRESSION: EXPRESSION '-' . EXPRESSION

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    EXPRESSION  go to state 80


State 54

   29 EXPRESSION: EXPRESSION '*' . EXPRESSION

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    EXPRESSION  go to state 81


State 55

   30 EXPRESSION: EXPRESSION '/' . EXPRESSION

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    EXPRESSION  go to state 82


State 56

    6 STATEMENT: token_id '[' EXPRESSION ']' . token_assign EXPRESSION

    token_assign  shift, and go to state 83


State 57

   13 STATEMENT: token_return '(' EXPRESSIONP ')' .

    $default  reduce using rule 13 (STATEMENT)


State 58

   11 STATEMENT: token_for '(' token_id token_in . EXPRESSION ':' EXPRESSION ')' '{' STATEMENTSP '}'

    token_int     shift, and go to state 23
    token_double  shift, and go to state 24
    token_id      shift, and go to state 25
    '('           shift, and go to state 28

    EXPRESSION  go to state 84


State 59

    9 STATEMENT: token_if '(' EXPRESSION ')' . '{' STATEMENTSP '}'
   10          | token_if '(' EXPRESSION ')' . '{' STATEMENTSP '}' token_else '{' STATEMENTSP '}'

    '{'  shift, and go to state 85


State 60

   14 STATEMENT: token_print '(' EXPRESSIONP ')' .

    $default  reduce using rule 14 (STATEMENT)


State 61

   12 STATEMENT: token_while '(' EXPRESSION ')' . '{' STATEMENTSP '}'

    '{'  shift, and go to state 86


State 62

    8 STATEMENT: token_int_name token_main token_assign token_function . '(' LIST_PARAMS ')' '{' STATEMENTSP '}'

    '('  shift, and go to state 87


State 63

    7 STATEMENT: INTORDOUBLE token_id token_assign token_function . '(' LIST_PARAMS ')' '{' STATEMENTSP '}'

    '('  shift, and go to state 88


State 64

   42 EXPRESSION: token_id '(' LIST_ARGS . ')'

    ')'  shift, and go to state 89


State 65

   23 LIST_ARGS: LIST_ARGSP .
   25 LIST_ARGSP: LIST_ARGSP . ',' EXPRESSION

    ','  shift, and go to state 90

    $default  reduce using rule 23 (LIST_ARGS)


State 66

   26 LIST_ARGSP: EXPRESSION .
   27 EXPRESSION: EXPRESSION . '+' EXPRESSION
   28           | EXPRESSION . '-' EXPRESSION
   29           | EXPRESSION . '*' EXPRESSION
   30           | EXPRESSION . '/' EXPRESSION
   31           | EXPRESSION . '>' EXPRESSION
   32           | EXPRESSION . '<' EXPRESSION
   33           | EXPRESSION . token_eq EXPRESSION
   34           | EXPRESSION . token_leq EXPRESSION
   35           | EXPRESSION . token_geq EXPRESSION
   36           | EXPRESSION . token_neq EXPRESSION
   37           | EXPRESSION . token_or EXPRESSION
   38           | EXPRESSION . token_and EXPRESSION

    token_eq   shift, and go to state 44
    token_leq  shift, and go to state 45
    token_geq  shift, and go to state 46
    token_neq  shift, and go to state 47
    token_or   shift, and go to state 48
    token_and  shift, and go to state 49
    '<'        shift, and go to state 50
    '>'        shift, and go to state 51
    '+'        shift, and go to state 52
    '-'        shift, and go to state 53
    '*'        shift, and go to state 54
    '/'        shift, and go to state 55

    $default  reduce using rule 26 (LIST_ARGSP)


State 67

   27 EXPRESSION: EXPRESSION . '+' EXPRESSION
   28           | EXPRESSION . '-' EXPRESSION
   29           | EXPRESSION . '*' EXPRESSION
   30           | EXPRESSION . '/' EXPRESSION
   31           | EXPRESSION . '>' EXPRESSION
   32           | EXPRESSION . '<' EXPRESSION
   33           | EXPRESSION . token_eq EXPRESSION
   34           | EXPRESSION . token_leq EXPRESSION
   35           | EXPRESSION . token_geq EXPRESSION
   36           | EXPRESSION . token_neq EXPRESSION
   37           | EXPRESSION . token_or EXPRESSION
   38           | EXPRESSION . token_and EXPRESSION
   41           | token_id '[' EXPRESSION . ']'

    token_eq   shift, and go to state 44
    token_leq  shift, and go to state 45
    token_geq  shift, and go to state 46
    token_neq  shift, and go to state 47
    token_or   shift, and go to state 48
    token_and  shift, and go to state 49
    '<'        shift, and go to state 50
    '>'        shift, and go to state 51
    '+'        shift, and go to state 52
    '-'        shift, and go to state 53
    '*'        shift, and go to state 54
    '/'        shift, and go to state 55
    ']'        shift, and go to state 91


State 68

    5 STATEMENT: token_id token_assign token_array '(' LIST_ARGS . ')'

    ')'  shift, and go to state 92


State 69

    4 STATEMENT: token_id token_assign token_seq '(' EXPRESSION . ',' EXPRESSION ',' EXPRESSION ')'
   27 EXPRESSION: EXPRESSION . '+' EXPRESSION
   28           | EXPRESSION . '-' EXPRESSION
   29           | EXPRESSION . '*' EXPRESSION
   30           | EXPRESSION . '/' EXPRESSION
   31           | EXPRESSION . '>' EXPRESSION
   32           | EXPRESSION . '<' EXPRESSION
   33           | EXPRESSION . token_eq EXPRESSION
   34           | EXPRESSION . token_leq EXPRESSION
   35           | EXPRESSION . token_geq EXPRESSION
   36           | EXPRESSION . token_neq EXPRESSION
   37           | EXPRESSION . token_or EXPRESSION
   38           | EXPRESSION . token_and EXPRESSION

    token_eq   shift, and go to state 44
    token_leq  shift, and go to state 45
    token_geq  shift, and go to state 46
    token_neq  shift, and go to state 47
    token_or   shift, and go to state 48
    token_and  shift, and go to state 49
    '<'        shift, and go to state 50
    '>'        shift, and go to state 51
    '+'        shift, and go to state 52
    '-'        shift, and go to state 53
    '*'        shift, and go to state 54
    '/'        shift, and go to state 55
    ','        shift, and go to state 93


State 70

   39 EXPRESSION: '(' EXPRESSION ')' .

    $default  reduce using rule 39 (EXPRESSION)


State 71

   27 EXPRESSION: EXPRESSION . '+' EXPRESSION
   28           | EXPRESSION . '-' EXPRESSION
   29           | EXPRESSION . '*' EXPRESSION
   30           | EXPRESSION . '/' EXPRESSION
   31           | EXPRESSION . '>' EXPRESSION
   32           | EXPRESSION . '<' EXPRESSION
   33           | EXPRESSION . token_eq EXPRESSION
   33           | EXPRESSION token_eq EXPRESSION .
   34           | EXPRESSION . token_leq EXPRESSION
   35           | EXPRESSION . token_geq EXPRESSION
   36           | EXPRESSION . token_neq EXPRESSION
   37           | EXPRESSION . token_or EXPRESSION
   38           | EXPRESSION . token_and EXPRESSION

    token_leq  shift, and go to state 45
    token_geq  shift, and go to state 46
    '<'        shift, and go to state 50
    '>'        shift, and go to state 51
    '+'        shift, and go to state 52
    '-'        shift, and go to state 53
    '*'        shift, and go to state 54
    '/'        shift, and go to state 55

    $default  reduce using rule 33 (EXPRESSION)


State 72

   27 EXPRESSION: EXPRESSION . '+' EXPRESSION
   28           | EXPRESSION . '-' EXPRESSION
   29           | EXPRESSION . '*' EXPRESSION
   30           | EXPRESSION . '/' EXPRESSION
   31           | EXPRESSION . '>' EXPRESSION
   32           | EXPRESSION . '<' EXPRESSION
   33           | EXPRESSION . token_eq EXPRESSION
   34           | EXPRESSION . token_leq EXPRESSION
   34           | EXPRESSION token_leq EXPRESSION .
   35           | EXPRESSION . token_geq EXPRESSION
   36           | EXPRESSION . token_neq EXPRESSION
   37           | EXPRESSION . token_or EXPRESSION
   38           | EXPRESSION . token_and EXPRESSION

    '+'  shift, and go to state 52
    '-'  shift, and go to state 53
    '*'  shift, and go to state 54
    '/'  shift, and go to state 55

    $default  reduce using rule 34 (EXPRESSION)


State 73

   27 EXPRESSION: EXPRESSION . '+' EXPRESSION
   28           | EXPRESSION . '-' EXPRESSION
   29           | EXPRESSION . '*' EXPRESSION
   30           | EXPRESSION . '/' EXPRESSION
   31           | EXPRESSION . '>' EXPRESSION
   32           | EXPRESSION . '<' EXPRESSION
   33           | EXPRESSION . token_eq EXPRESSION
   34           | EXPRESSION . token_leq EXPRESSION
   35           | EXPRESSION . token_geq EXPRESSION
   35           | EXPRESSION token_geq EXPRESSION .
   36           | EXPRESSION . token_neq EXPRESSION
   37           | EXPRESSION . token_or EXPRESSION
   38           | EXPRESSION . token_and EXPRESSION

    '+'  shift, and go to state 52
    '-'  shift, and go to state 53
    '*'  shift, and go to state 54
    '/'  shift, and go to state 55

    $default  reduce using rule 35 (EXPRESSION)


State 74

   27 EXPRESSION: EXPRESSION . '+' EXPRESSION
   28           | EXPRESSION . '-' EXPRESSION
   29           | EXPRESSION . '*' EXPRESSION
   30           | EXPRESSION . '/' EXPRESSION
   31           | EXPRESSION . '>' EXPRESSION
   32           | EXPRESSION . '<' EXPRESSION
   33           | EXPRESSION . token_eq EXPRESSION
   34           | EXPRESSION . token_leq EXPRESSION
   35           | EXPRESSION . token_geq EXPRESSION
   36           | EXPRESSION . token_neq EXPRESSION
   36           | EXPRESSION token_neq EXPRESSION .
   37           | EXPRESSION . token_or EXPRESSION
   38           | EXPRESSION . token_and EXPRESSION

    token_leq  shift, and go to state 45
    token_geq  shift, and go to state 46
    '<'        shift, and go to state 50
    '>'        shift, and go to state 51
    '+'        shift, and go to state 52
    '-'        shift, and go to state 53
    '*'        shift, and go to state 54
    '/'        shift, and go to state 55

    $default  reduce using rule 36 (EXPRESSION)


State 75
